# individual-assignment

./: README.md
cpp/: CMakeLists.txt
cpp/include/: matmul.hpp
cpp/src/: bench.cpp  matmul.cpp
data/outputs/: results.csv  results_all.csv  results_cpp.csv  results_java.csv  results_py.csv
java/: pom.xml
java/src/main/java/org/martyna/matmul/: CLI.java  MatMul.java
java/src/test/java/org/martyna/matmul/: MatMulTest.java
latex/: main.aux  main.fdb_latexmk  main.fls  main.out  main.tex
python/bench/: bench.py  csv_to_latex.py  merge_csvs.py
python/matmul/: matmul_prod.py
